--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(passwordmanager)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(passwordmanager main.cpp)
+add_executable(passwordmanager main.cpp
+        outputs.h
+        outputs.cpp)
